Adding the testing framework (#1)
* Adding testing

* Added CI back

* Added code coverage

* Added code coverage

* Updates

* Added token

* Updated ci

* Updated to fail build

* Added pytest for mav feature

* Updated CI

* Started testing

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ token.txt
 tests/__pycache__/*
 .coverage
 build/*
+emg_feature_extraction/__pycache__/*
+.coverage
+tests/feature_tests/__pycache__/*
