Adding an EMG Classification module (#3)
* Adding an EMG Classification module

* Updates

* Added TDPSD feature group

* Added saving and loading of classifiers

* Added the beginning of a data collector

* Added saving and loading of classifiers

* Added the beginning of a data collector

* Updates

* Big updates to data handler

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ unb_emg_toolbox/__pycache__/*
 tests/feature_tests/__pycache__/*
 tests/feature_tests/__pycache__/
 todo.txt
+demos/__pycache__/*
+data/*
+raw_emg.csv
