--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ sampen==0.0.17
 pytest==7.1.3
 pytest-cov==4.0.0
 scikit-learn==0.24.2
+pillow==8.4.0
 # For Docs
-sphinx 
-sphinx_rtd_theme
-myst_parser
+sphinx==4.2.0
+sphinx_rtd_theme==1.0.0
+myst_parser==0.18.1
