--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ pytest==7.1.3
 pytest-cov==4.0.0
 scikit-learn==0.24.2
 pillow==8.4.0
+matplotlib=3.5.0
 # For Docs
 sphinx==4.2.0
 sphinx_rtd_theme==1.0.0
