--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: Workflow for Codecov example-python
+name: CI pipeline
 on: [push]
 jobs:
   run:
@@ -14,3 +14,15 @@ jobs:
         run: pip install -r requirements.txt
       - name: Run pytest
         run: pytest
+      - name: Build docs
+        if: github.ref == 'refs/heads/main'
+        run: |
+          sphinx-build docs/source _build
+      - name: Publish docs
+        uses: peaceiris/actions-gh-pages@v3
+        if: github.ref == 'refs/heads/main'
+        with:
+          publish_branch: gh-pages
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: _build/
+          force_orphan: true
