--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ pytest-cov==4.0.0
 scikit-learn==0.24.2
 pillow==8.4.0
 matplotlib==3.5.0
+librosa==0.9.2
 # For Docs
 sphinx==4.2.0
 sphinx_rtd_theme==1.0.0
