Updating the training UI

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ tests/feature_tests/*.m
 tests/feature_tests/required_fn/*
 example_data/*
 unb_emg_toolbox/datasets/__pycache__/*
+demos/data/sgt_example/*
