--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-numpy==1.21.5
+numpy
 scipy==1.7.2
 pytest==7.1.3
 pytest-cov==4.0.0
-scikit-learn==0.24.2
+scikit-learn
 pillow==8.4.0
 matplotlib==3.5.0
 librosa==0.9.2
