--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 dist/*
-unb_emg_toolbox.egg-info/*
+libemg.egg-info/*
 token.txt
 .pytest_cache/*
 tests/__pycache__/*
 .coverage
 build/*
-unb_emg_toolbox/__pycache__/*
+libemg/__pycache__/*
 .coverage
 tests/feature_tests/__pycache__/*
 tests/feature_tests/__pycache__/
@@ -19,6 +19,6 @@ docs/.DS_Store
 tests/feature_tests/*.m
 tests/feature_tests/required_fn/*
 example_data/*
-unb_emg_toolbox/datasets/__pycache__/*
+libemg/datasets/__pycache__/*
 demos/data/sgt_example/*
-unb_emg_toolbox/streamers/__pycache__/*
+libemg/streamers/__pycache__/*
