Training module and hardware analysis

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ example_data/*
 libemg/datasets/__pycache__/*
 demos/data/sgt_example/*
 libemg/streamers/__pycache__/*
+demos/images/
+demos/data/sgt/*
