--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,13 @@ demos/data/*
 data_tmp/*
 images_tmp/*
 .venv
+images/ 
+libemg/__init__.pyc
+test_myo.py
+test_pca.py
+libemg/_gui/__pycache__/*
+media/*
+*.exe
+test_*.py
+*.csv
+.vscode/*
