--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-numpy==1.26.4
+numpy<2
 scipy==1.7.2
 pytest==7.1.3
 pytest-cov==4.0.0
@@ -19,5 +19,8 @@ myst_parser==0.18.1
 linkify-it-py==2.0.0
 # For testing
 pytest-skip-slow==0.0.3
+dearpygui
 # For oymotion - only on linx
+bluepy
 PyWavelets==1.4.1
+websockets==8.1
