--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ scipy==1.7.2
 pytest==7.1.3
 pytest-cov==4.0.0
 scikit-learn
-pillow==8.4.0
+pillow
 matplotlib==3.5.0
 librosa==0.9.2
 pyomyo==0.0.5
@@ -16,3 +16,5 @@ myst_parser==0.18.1
 linkify-it-py==2.0.0
 # For testing
 pytest-skip-slow==0.0.3
+# For oymotion - only on linx
+bluepy
