--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ myst_parser==0.18.1
 linkify-it-py==2.0.0
 # For testing
 pytest-skip-slow==0.0.3
+dearpygui
 # For oymotion - only on linx
 bluepy
 PyWavelets==1.4.1
