--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,8 @@ demos/images/
 demos/data/sgt/*
 demos/data/GRABMyo/*
 demos/data/*
+images/ 
+libemg/__init__.pyc
+test_myo.py
+test_pca.py
+libemg/_gui/__pycache__/*
