--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-numpy
+numpy<2
 scipy==1.7.2
 pytest==7.1.3
 pytest-cov==4.0.0
@@ -20,3 +20,4 @@ dearpygui
 # For oymotion - only on linx
 bluepy
 PyWavelets==1.4.1
+websockets==8.1
