--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ wfdb
 bleak
 semantic-version
 requests
+opencv-python
 # For Docs
 sphinx==5.0.0
 sphinx_rtd_theme==1.0.0
@@ -21,11 +22,10 @@ linkify-it-py==2.0.0
 pytest-skip-slow==0.0.3
 dearpygui
 # For oymotion - only on linx
-bluepy
+# bluepy
 PyWavelets==1.4.1
 # for new sgt
 dearpygui
-json
 opencv-python
 datetime
 websockets==8.1
