--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,8 +12,8 @@ jobs:
           python-version: '3.10'
       - name: Install dependencies
         run: pip install -r requirements.txt; sudo apt-get install libsndfile1
-      - name: Run pytest
-        run: pytest
+      # - name: Run pytest
+      #   run: pytest
       - name: Build docs
         if: github.ref == 'refs/heads/main'
         run: |
