--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ pyserial
 wfdb
 bleak
 requests
+h5py
 # For Docs
 sphinx==5.0.0
 sphinx_rtd_theme==1.0.0
@@ -27,4 +28,6 @@ dearpygui
 opencv-python
 datetime
 websockets==8.1
+h5py
+onedrivedownloader
 sifi-bridge-py
