--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,7 +11,7 @@ jobs:
         with:
           python-version: '3.10'
       - name: Install dependencies
-        run: pip install -r requirements.txt; sudo apt-get install libsndfile1
+        run: sudo apt-get install libsndfile1; sudo apt-get install -y libglib2.0-dev; pip install -r requirements.txt; 
       # - name: Run pytest
       #   run: pytest
       - name: Build docs
